src/App.css
@media(min-width: 300px){
	html,body
	{
		width: 100%;
		height: 100%;
		margin: 0px;
		padding: 0px;
		overflow-x: hidden; 
	}

   	body {
		width: 100%;
		background-image: url('./assets/images/Tomoe_Background_Final.jpg');
		background-repeat: no-repeat;
		background-size: cover;
   	}

   	.header {
		background: url('../src/assets/images/Hero.jpg') center;
		min-height: 188px;
		background-repeat: no-repeat;
		background-size: cover;
   	}

	.nav-item-container {
		/* margin: 0; */
		width: 100%;
		display: flex;
		flex-direction: row;
		justify-content: space-evenly;
	}
	.nav-item {
		align-self: baseline;
		text-decoration: none;
		font-family: TrajanPro3;
		font-size: 20px;
		font-weight: 600;
		line-height: normal;
		/* letter-spacing: -0.01px; */
		color: white;
	}

	.open-until {
		width: 92.5%;
		text-align: right;
		color: white;
	}


	.center {
		font-size: 30px;
	}

	/* Christina - Press Reviews */
	.press-Reviews {
		/* display: flex;
		flex-flow: wrap;
		justify-content: space-around;  */
		display: grid;
	}

	.gridContainer {
		display: grid;
		grid-template-columns: auto auto;
		grid-gap: 10px;
		margin-left: 0px;
	}

	.fullReview {
		margin-top: 10px;
	}

	.img {
		height: 125px;
		width: 125px; 
		margin-top: 33px;
		order: 1;
		margin-left: 70px;
	}

	.review {
		margin-left: 30px;
		color: white;
		max-width: 300px;
		max-height: 72px;
		overflow-wrap: break-word;
		order: 2;
		font-family: 'Gill Sans', sans-serif;
		font-style: italic;
		margin: 0;
	}

	.infatuationImg {
		height: 240px;
		width: 175px;
		margin-top: -30px;
		order: 1;
	}

	.infatuationP {
		margin-left: 20px;
	}

	.timeOutImg {
		width: 190px;
		margin-right: 100px;
		margin: 0;
	}

	.timeOutP {
		margin-bottom: 20px;
	}

	.thrillistImg {
		margin: 0;
		margin-top: 5px;
		margin-left: 20px;
	}

	.thrillist {
		margin-top: -20px;
	}

/* ////////////////////////////////////////////////////////////////////////////////////// */
/* //////////////////////////////////// Info (BELOW) //////////////////////////////////// */
.info{
	color: wheat;
	display: flex;
	flex-flow: column;
	align-items: center;
}
	.info .info-title {
		font-size: 50px;
	}
	.info .location {
		display: flex;
		flex-flow: column;
		align-items: center;
	}
		.info .info-title {
			font-size: 50px;
		}
		.info .info-content {
			display: flex;
			flex-flow: row;
			width: 100%;
			justify-content: space-between;
		}
			.info .info-content .location {
				display: flex;
				flex-flow: column;
				align-items: center;
				margin: 0 150px;
			}
				.info .info-content .location .address {
					display: flex;
					flex-flow: column;
					align-items: center;
				}
			
			.info .info-content .week-schedule {
				display: flex;
				flex-flow: column;
				justify-content: center;
			}
				.info .info-content .week-schedule .weekday-container {
					display: flex;
					flex-flow: row;
					margin: 5px 10px;
					/* padding: 0 50px; */
					color: wheat;
					text-align: center;
					justify-content: space-between;
				}
				.info .info-content .week-schedule .weekday-container.today {
					color: rgb(235, 146, 146);
				}
					.info .info-content .week-schedule .weekday-container .title {
						width: 125px;
						text-align: right;
						margin: 0 10px;
					}
					.info .info-content .week-schedule .weekday-container .open-close-container {
						display: flex;
						flex-flow: column;
						justify-content: left;
						text-align: left;
					}
						.info .info-content .week-schedule .weekday-container .open-close-container .open-close.now {
							/* padding: 0 100px; */
							font-weight: 900;
						}
	/* //////////////////////////////////// Info (ABOVE) //////////////////////////////////// */
	/* ////////////////////////////////////////////////////////////////////////////////////// */
	body {
		background-image: url("./assets/images/Tomoe_Background_Final.jpg");
	}

	.menu-image {
		width: 10%;
		height: 10%;
		border-radius: 50%;
	}

	.menu-container {
		display: flex;
		flex-direction: column;
	}
	.menu-list-title {
		align-self: center;
	}
	.menu-list {
		display: flex;
		flex-direction: row;
		justify-content: center;
	}
	.menu-category {
		align-self: center;
	}
	.menu-item-container {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		margin: 0 10px;
	}
		.menu-item-container .menu-item {
			white-space: nowrap;
			font-weight: 700;
		}
		.menu-item-container .description{
			font-weight: 200;
			font-style: italic;
			margin: 0;
		}
		.menu-item-container .description, .menu-item-container .price {
			width:100%
		}
		.menu-item-container .price{
			text-align: right;
		}
			.info .week-schedule .weekday-container .open-close.now {
				/* padding: 0 100px; */
				font-weight: 900;
			}
/* //////////////////////////////////// Info (ABOVE) //////////////////////////////////// */
/* ////////////////////////////////////////////////////////////////////////////////////// */
body {
	background-image: url("./assets/images/Tomoe_Background_Final.jpg");
}

.menu-image {
	width: 80%;
	height: 80%;
	border-radius: 50%;
}

.menu-container {
	display: flex;
	flex-direction: column;
	justify-content: space-around;
}

.menu-list-title {
	align-self: center;
}

.menu-list {
	display: flex;
	flex-direction: row;
}

.menu-category {
	align-self: center;
}

.menu-item {
	font-weight: 600;
}

.menu-item-container {
	display: flex;
	flex-direction: row;
	
}

.menu-list-title, .menu-title {
	color: white;
}

.menu-title-container {
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
}

menu-title {
	justify-self: center;
	align-self: center;
}

.menu {
	display: flex;
	flex-direction: column;
	justify-items: center;
	align-items: center;
}

}

@media(min-width: 700px){
	html,body
	{
		width: 100%;
		height: 100%;
		margin: 0px;
		padding: 0px;
		overflow-x: hidden; 
	}

   	body {
		width: 100%;
		background-image: url('./assets/images/Tomoe_Background_Final.jpg');
		background-repeat: no-repeat;
		background-size: cover;
   	}

   	.header {
		background: url('../src/assets/images/Hero.jpg') center;
		min-height: 188px;
		background-repeat: no-repeat;
		background-size: cover;
   	}

	.nav-item-container {
		/* margin: 0; */
		width: 100%;
		display: flex;
		flex-direction: row;
		justify-content: space-evenly;
	}
	.nav-item {
		align-self: baseline;
		text-decoration: none;
		font-family: TrajanPro3;
		font-size: 20px;
		font-weight: 600;
		line-height: normal;
		/* letter-spacing: -0.01px; */
		color: white;
	}

	.open-until {
		width: 92.5%;
		text-align: right;
		color: white;
	}


	.center {
		font-size: 30px;
	}

/* ////////////////////////////////////////////////////////////////////////////////////// */
/* //////////////////////////////////// Info (BELOW) //////////////////////////////////// */
.info{
	color: wheat;
	display: flex;
	flex-flow: column;
	align-items: center;
}
	.info .info-title {
		font-size: 50px;
	}
	.info .location {
		display: flex;
		flex-flow: column;
		align-items: center;
	}
		.info .location .address {
			display: flex;
			flex-flow: column;
			align-items: center;
		}
	.info .week-schedule {
		display: flex;
		flex-flow: row;
		justify-content: center;
	}
		.info .week-schedule .weekday-container {
			margin: 30px 10px;
			/* padding: 0 50px; */
			color: wheat;
			text-align: center;
		}
		.info .week-schedule .weekday-container.today {
			color: red;
		}
			.info .week-schedule .weekday-container .open-close.now {
				/* padding: 0 100px; */
				font-weight: 900;
			}
/* //////////////////////////////////// Info (ABOVE) //////////////////////////////////// */
/* ////////////////////////////////////////////////////////////////////////////////////// */
body {
	background-image: url("./assets/images/Tomoe_Background_Final.jpg");
}

.menu-image {
	min-width: 80%;
	min-height: 80%;
	border-radius: 50%;

}

.menu-container {
	display: flex;
	flex-direction: column;
}

.menu-list-title {
	align-self: center;
}

.menu-list {
	display: flex;
	flex-direction: row;
	justify-content: center;
}

.menu-category {
	align-self: center;
}

.menu-item {
	font-weight: 600;
}

.menu-item-container {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	
}


}

